fix: enable overflow/fix styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,25 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px;
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+  background-color: #000;
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+  background-color: #3b3b3a;
+  border-radius: 16px;
+  border: 4px solid #000;
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {
+  display: none;
+}
